tests/deploy-and-service (copia).yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container
        image: nginxdemos/hello
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: hello
