tests/deploy-and-service-full-website.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: just-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: just
  template:
    metadata:
      labels:
        app: just
    spec:
      containers:
      - name: just-template
        image: redxlus/just-template-http
---
apiVersion: v1
kind: Service
metadata:
  name: just-template
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: just
