tests/Ingress-directorios.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-varios-directorios
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: midominio.com
    http:
      paths:
      - path: /nuestro-reloj
        backend:
          serviceName: nombre-de-nuestro-service-uno
          servicePort: 80
      - path: /aplicacion-de-calculadora
        backend:
          serviceName: nombre-de-nuestro-service-dos
          servicePort: 80
