tests/Ingress-simple.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-simple
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  backend:
   serviceName: nombre-de-nuestro-service
   servicePort: 80
