tests/Ingress.subdominios.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-varios-directorios
spec:
  rules:
  - host: reloj.midominio.com
     backend:
      serviceName: nombre-de-nuestro-service-uno
      servicePort: 80
  - host: calculadora.midominio.com
     backend:
      serviceName: nombre-de-nuestro-service-dos
      servicePort: 80
